# plank

./: .gitignore  Apptainer.demo_bfs  CMakeLists.txt  LICENSE  README.md  epddl.cf
src/frontend/: CMakeLists.txt  main.cpp
src/frontend/bfs-planner/: CMakeLists.txt  main.cpp
src/frontend/bfs-planner/search/: planner.cpp  search_space.cpp
src/frontend/bfs-planner/utils/: spec_paths_loader.cpp
src/frontend/plank/: CMakeLists.txt  cli_manager.cpp  main.cpp
src/frontend/plank/cli/: cli_manager.cpp
src/frontend/plank/cli/commands/: cd.cpp  clear.cpp  export.cpp  formula.cpp  ground.cpp  load.cpp  ls.cpp  man.cpp  parse.cpp  pwd.cpp  script.cpp  show.cpp  state.cpp  task.cpp  validate.cpp  version.cpp
src/frontend/plank/cli_commands/: cd.cpp  clear.cpp  export.cpp  formula.cpp  ground.cpp  load.cpp  ls.cpp  parse.cpp  pwd.cpp  script.cpp  show.cpp  state.cpp  task.cpp  validate.cpp  version.cpp
src/frontend/plank/printer/: cli_data_printer.cpp  formula_printer.cpp  specification_printer.cpp
src/frontend/printer/: cli_data_printer.cpp  formula_printer.cpp  specification_printer.cpp
src/lib/: CMakeLists.txt
src/lib/ast/common/: formulas_ast.cpp
src/lib/ast/domains/actions/: obs_conditions_ast.cpp
src/lib/ast/domains/events/: events_postconditions_ast.cpp
src/lib/ast/problems/init/: finitary_s5_theory_ast.cpp
src/lib/del/: CMakeLists.txt
src/lib/del/language/: formulas.cpp  label.cpp  language.cpp
src/lib/del/semantics/: model_checker.cpp
src/lib/del/semantics/actions/: action.cpp
src/lib/del/semantics/states/: finitary_s5_theory.cpp  state.cpp
src/lib/del/semantics/update/: updater.cpp
src/lib/epddl/: CMakeLists.txt
src/lib/epddl/ast/common/: formulas_ast.cpp
src/lib/epddl/grounder/: grounder_helper.cpp  language_grounder.cpp
src/lib/epddl/grounder/actions/: actions_grounder.cpp  events_grounder.cpp  obs_conditions_grounder.cpp
src/lib/epddl/grounder/formulas/: formulas_and_lists_grounder.cpp
src/lib/epddl/grounder/initial_state/: explicit_initial_state_grounder.cpp  facts_init_grounder.cpp  finitary_s5_theory_grounder.cpp  initial_state_grounder.cpp
src/lib/epddl/json-printer/: actions_printer.cpp  facts_printer.cpp  formulas_printer.cpp  initial_state_printer.cpp  language_printer.cpp  planning_task_printer.cpp
src/lib/epddl/lexer/: lexer.cpp
src/lib/epddl/parser/common/: formulas_parser.cpp  parameters_parser.cpp  requirements_parser.cpp  typed_elem_parser.cpp
src/lib/epddl/parser/domains/: constants_decl_parser.cpp  domain_libraries_parser.cpp  domain_parser.cpp  predicates_decl_parser.cpp  requirements_parser.cpp  types_decl_parser.cpp
src/lib/epddl/parser/libraries/: act_type_decl_parser.cpp  act_type_library_parser.cpp  event_conditions_parser.cpp
src/lib/epddl/parser/problems/: agent_groups_parser.cpp  agents_parser.cpp  goal_parser.cpp  objects_parser.cpp  problem_domain_parser.cpp  problem_parser.cpp
src/lib/epddl/parser/tokens/: tokens_parser.cpp
src/lib/epddl/type-checker/: type_checker_helper.cpp
src/lib/epddl/type-checker/common/: formulas_and_lists_type_checker.cpp  requirements_type_checker.cpp
src/lib/epddl/type-checker/domains/: actions_type_checker.cpp  domains_type_checker.cpp  events_type_checker.cpp
src/lib/epddl/type-checker/libraries/: act_type_library_type_checker.cpp  act_types_type_checker.cpp
src/lib/epddl/type-checker/problems/: agent_groups_type_checker.cpp  facts_init_type_checker.cpp  initial_states_type_checker.cpp  problems_type_checker.cpp
src/lib/epddl/utils/: spec_paths_loader.cpp
src/lib/grounder/: grounder_helper.cpp  language_grounder.cpp
src/lib/grounder/actions/: actions_grounder.cpp  events_grounder.cpp  obs_conditions_grounder.cpp
src/lib/grounder/formulas/: formulas_and_lists_grounder.cpp
src/lib/grounder/initial_state/: explicit_initial_state_grounder.cpp  facts_init_grounder.cpp  finitary_s5_theory_grounder.cpp  initial_state_grounder.cpp
src/lib/json-printer/: actions_printer.cpp  facts_printer.cpp  formulas_printer.cpp  initial_state_printer.cpp  language_printer.cpp  planning_task_printer.cpp
src/lib/lexer/: lexer.cpp
src/lib/parser/common/: formulas_parser.cpp  parameters_parser.cpp  typed_elem_parser.cpp
src/lib/parser/domains/: constants_decl_parser.cpp  domain_libraries_parser.cpp  domain_parser.cpp  predicates_decl_parser.cpp  requirements_parser.cpp  types_decl_parser.cpp
src/lib/parser/domains/actions/: action_decl_parser.cpp  action_signatures_parser.cpp  obs_conditions_parser.cpp
src/lib/parser/domains/events/: event_decl_parser.cpp  event_postconditions_parser.cpp
src/lib/parser/libraries/: act_type_decl_parser.cpp  act_type_library_parser.cpp  event_conditions_parser.cpp
src/lib/parser/problems/: agent_groups_parser.cpp  agents_parser.cpp  goal_parser.cpp  objects_parser.cpp  problem_domain_parser.cpp  problem_parser.cpp
src/lib/parser/problems/init/: explicit_initial_state_parser.cpp  facts_init_parser.cpp  finitary_s5_theory_parser.cpp  initial_state_parser.cpp
src/lib/parser/tokens/: tokens_parser.cpp
src/lib/type-checker/: type_checker_helper.cpp
src/lib/type-checker/common/: formulas_and_lists_type_checker.cpp  requirements_type_checker.cpp
src/lib/type-checker/domains/: actions_type_checker.cpp  domains_type_checker.cpp  events_type_checker.cpp
src/lib/type-checker/libraries/: act_type_library_type_checker.cpp  act_types_type_checker.cpp
src/lib/type-checker/problems/: agent_groups_type_checker.cpp  facts_init_type_checker.cpp  initial_states_type_checker.cpp  problems_type_checker.cpp
tests/: CMakeLists.txt  test.cpp
tests/units/: lexer_tests.cpp
tests/units/epddl/lexer/: lexer_tests.cpp
tests/units/lexer/: lexer_tests.cpp
tests/units/parser/common/: formulas_tests.cpp  requirements_tests.cpp
tests/units/parser/domains/: actions_tests.cpp  domain_libraries_tests.cpp  predicates_tests.cpp  types_tests.cpp
tests/units/parser/libraries/: act_type_libraries_tests.cpp  action_types_tests.cpp
tests/units/parser/problems/: agent_groups_tests.cpp  goals_tests.cpp  objects_tests.cpp  problems_tests.cpp
(+861 files in other folders)
